new package lock and node modules

--- a/restuarant1/src/Landing/Landing.css
+++ b/restuarant1/src/Landing/Landing.css
@@ -1,5 +1,5 @@
 .landingParent {
-    /* border: solid 3px; */
+    /* border: soligit d 3px; */
     color: green;
     display: flex;
     justify-content: center;
