--- a/restuarant1/src/Landing/Landing.css
+++ b/restuarant1/src/Landing/Landing.css
@@ -1,6 +1,6 @@
 .landingParent {
     /* border: soligit d 3px; */
-    color: green;
+    /* color: green; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,7 +17,7 @@
     width: -webkit-fill-available;
     display: flex;
     justify-content: center;
-    align-items: end;
+    align-items: flex-end;
     /* padding-top: 1%; */
 }
 
@@ -35,11 +35,11 @@
 
 
 #landingParentOverlay {
-    background: linear-gradient( rgba(0, 0, 0, 1.5), rgba(0, 0, 0, 0.5) ), url("../images/background.jpg");
+    /* background: linear-gradient( rgba(0, 0, 0, 1.5), rgba(0, 0, 0, 0.5) ), url("../images/background.jpg");
     -webkit-background-size: cover;
     -moz-background-size:  cover;
     -o-background-size: cover;
-    background-size: cover;
+    background-size: cover; */
     display: flex;
     justify-content: center;
     height: 803px;
