--- a/restuarant1/src/App.css
+++ b/restuarant1/src/App.css
@@ -37,11 +37,11 @@
   }
 }
 
-.appParent {
+/* .appParent {
   background: linear-gradient( rgba(0, 0, 0, 1.5), rgba(0, 0, 0, 0.5) ), url("./images/background.jpg");
     -webkit-background-size: cover;
     -moz-background-size:  cover;
     -o-background-size: cover;
     background-size: cover;
     height: 100%;
-}
+} */
