--- a/restuarant1/src/Landing/Landing.css
+++ b/restuarant1/src/Landing/Landing.css
@@ -1,10 +1,10 @@
 .landingParent {
     /* border: soligit d 3px; */
     /* color: green; */
-    display: flex;
+    /* display: flex;
     justify-content: center;
     align-items: center;
-   
+    */
     
 }
 
