--- a/restuarant1/src/index.css
+++ b/restuarant1/src/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap');
 
 body {
-  background: linear-gradient( rgba(0, 0, 0, 1.5), rgba(0, 0, 0, 0.5) ), url("./images/background.jpg");
+  background: linear-gradient( rgba(0, 0, 0, 1.5), rgba(0, 0, 0, 0.5) ), url("./images/background.jpg") center/cover;
   -webkit-background-size: cover;
   -moz-background-size:  cover;
   -o-background-size: cover;
